<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.softartdev.noteroom.ui.note.NoteActivity"
    tools:showIn="@layout/activity_note">

    <com.softartdev.noteroom.ui.widget.LinedEditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:fadingEdge="vertical"
        android:fontFamily="@font/podkova"
        android:gravity="top"
        android:hint="@string/type_text"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@tools:sample/lorem/random"
        android:importantForAutofill="no" />

</androidx.core.widget.NestedScrollView>
